--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   background: #fafafa;
 }
 
-html, body, #knot-draw, #container {
+html, body, {
   width: 100%;
   height: 100%;
   min-height: 100%;
@@ -28,12 +28,16 @@ body {
 
 .edge {
     stroke: blue;
-    stroke-width:.1px;
+    stroke-width:1px;
     vector-effect: non-scaling-stroke;
 }
 
 .face {
-    fill: green;
+    fill: white;
+}
+
+.face:hover {
+    /*fill: green;*/
 }
 
 .knot {
@@ -54,3 +58,13 @@ body {
 .hover-node {
   fill: red;
 }
+
+.Set1 .q0-9{stroke:rgb(228,26,28)}
+.Set1 .q1-9{stroke:rgb(55,126,184)}
+.Set1 .q2-9{stroke:rgb(77,175,74)}
+.Set1 .q3-9{stroke:rgb(152,78,163)}
+.Set1 .q4-9{stroke:rgb(255,127,0)}
+.Set1 .q5-9{stroke:rgb(255,255,51)}
+.Set1 .q6-9{stroke:rgb(166,86,40)}
+.Set1 .q7-9{stroke:rgb(247,129,191)}
+.Set1 .q8-9{stroke:rgb(153,153,153)}
