--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 
 .edge {
     stroke: blue;
-    stroke-width:1px;
+    stroke-width:.1px;
     vector-effect: non-scaling-stroke;
 }
 
@@ -43,7 +43,7 @@ body {
 .knot {
     fill: none;
     stroke: black;
-    stroke-width:3px;
+    stroke-width:1px;
     vector-effect: non-scaling-stroke;
 }
 
