--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ html, body, {
   min-height: 100%;
 }
 
+#container, #knot-draw {
+    width: 100%;
+    height: 1000px;
+    min-height: 100%;
+}
+
 body {
   margin: 0;
 }
@@ -33,7 +39,7 @@ body {
 }
 
 .face {
-    fill: white;
+    fill: lightgray;
 }
 
 .face:hover {
