--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,29 @@
 
 html, body, {
   width: 100%;
-  height: 100%;
+  height: auto;
   min-height: 100%;
+  position: relative
 }
 
-#container, #knot-draw {
+header {
     width: 100%;
-    height: 1000px;
-    min-height: 100%;
+    height: 50px;
+}
+
+#container {
+    width: 100%;
+    position: absolute;
+    bottom: 3px;
+    top: 50px;
+    padding: 0;
+}
+
+#knot-draw {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
